--- a/app/globals.css
+++ b/app/globals.css
@@ -77,6 +77,7 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  font-family: var(--font-mono);
 }
 
 html,
@@ -98,10 +99,22 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+  border-top: 0;
+  border-left: 0;
+  border-right: 0;
+  border-style: dashed;
 }
 
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
+}
+
+ul {
+  margin: 0.5rem;
+}
+
+li {
+  margin: 0.5rem;
 }
